[tool.pdm]
distribution = false
[tool.pdm.scripts]
start = "fastapi dev app/main.py --host 0.0.0.0 --port 8001"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-asyncio>=0.23.8",
    "pytest-twisted>=1.14.2",
    "pytest-trio>=0.8.0",
    "pytest-tornasync>=0.6.0.post2",
    "anyio>=4.4.0",
    "twisted>=24.3.0",
]
[project]
name = "putian-ai-todo-back-end"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Harry & Leo", email = "harry.wadu233@gmail.com" }]
dependencies = [
    "fastapi>=0.111.1",
    "ormar>=0.20.1",
    "aiosqlite>=0.20.0",
    "bcrypt>=4.2.0",
    "authx>=1.3.0",
    "fastapi-mail>=1.4.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "GPLv3" }


